docs/0.14/_sources/api/gammapy.data.DataStore.rst.txt
DataStore
=========

.. currentmodule:: gammapy.data

.. autoclass:: DataStore
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~DataStore.DEFAULT_HDU_TABLE
      ~DataStore.DEFAULT_OBS_TABLE

   .. rubric:: Methods Summary

   .. autosummary::

      ~DataStore.check
      ~DataStore.copy_obs
      ~DataStore.from_config
      ~DataStore.from_dir
      ~DataStore.from_events_files
      ~DataStore.from_file
      ~DataStore.get_observations
      ~DataStore.info
      ~DataStore.obs

   .. rubric:: Attributes Documentation

   .. autoattribute:: DEFAULT_HDU_TABLE
   .. autoattribute:: DEFAULT_OBS_TABLE

   .. rubric:: Methods Documentation

   .. automethod:: check
   .. automethod:: copy_obs
   .. automethod:: from_config
   .. automethod:: from_dir
   .. automethod:: from_events_files
   .. automethod:: from_file
   .. automethod:: get_observations
   .. automethod:: info
   .. automethod:: obs
